--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			<br>
 			<h1>Youtube  Video Player</h1>
 			<br>
-			<form id="form">
-				<div  class="autocomplete form-group" >
+			<form id="form" autocomplete="off" action="/action_page.php">
+				<div  class="autocomplete" style="width:500px;" >
 					<input type="text" class="form-control" id="search">
 				</div>
 				<div class="form-group">
